--- a/css/style.css
+++ b/css/style.css
@@ -11,3 +11,17 @@
     justify-content: center;
     align-items: center;
 }
+
+.tarjeta_de_moquepon{
+    width: 100px;
+    height: 100px;
+    background: aquamarine;
+    padding: 10px;
+    box-sizing: border-box;
+    margin: 10px;
+    border: 1px solid hotpink;
+}
+
+input{
+    display: none;
+}
