--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&family=Poppins:wght@300&display=swap');
 
 body{
-    font-family: 'Fredoka One', cursive;
+    font-family: 'Poppins', sans-serif;
     background-color: #041562;
 }
 
@@ -15,6 +15,7 @@ body{
 .titulo{
     color: white;
     font-size: 32px;
+    font-family: 'Fredoka One', cursive;
 }
 
 .subtitulo{
@@ -48,6 +49,17 @@ label{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+#boton-mascota{
+    width: 180px;
+    height: 40px;
+    border-radius: 20px;
+    background: transparent;
+    border: 2px solid white;
+    color: white;
+    font-family: 'Poppins', sans-serif;
+    margin-top: 30px;
 }
 
 input{
