layout: titulo y ataques

--- a/css/style.css
+++ b/css/style.css
@@ -65,3 +65,19 @@ label{
 input{
     display: none;
 }
+
+#seleccionar-ataque{
+    flex-direction: column;
+    align-items: center;
+}
+
+.boton-ataque{
+    background-color: #11468F;
+    padding: 10px;
+    box-sizing: border-box;
+    border-radius: 20px;
+    border-color: transparent;
+    width: 100px;
+    color: white;
+    font-family: 'Poppins', sans-serif;
+}
